@@ -16,6 +16,7 @@ Version 0.11
   * Gnuplot plotting scripts
   * Clojure
   * POV-Ray scene files
+  * Sqlite3 interactive console sessions
 
 - Lexers improved:
   * C lexer highlights standard library functions now and supports
